<resources>
    <string name="app_name">CoviGuide</string>
    <string name="AppName">CoviGuide</string>
    <string name="Start">Start</string>
    <string name="applogo">AppLogo</string>
    <string name="hometext">For more information about the pandamic situation in Tunisia visit this site :</string>
    <string name="buttonsite">Visit site</string>
    <string name="about_virus">About virus</string>
    <string name="smptoms">Symptoms</string>
    <string name="how_to_protect">How to protect</string>
    <string name="things_to_do">Things to do</string>
    <string name="mask">Mask</string>
    <string name="do_not_touch">do not touch</string>
    <string name="facetouch">facetouch</string>
    <string name="no_touch">No touch</string>
    <string name="hand_washing">Hand washing</string>
    <string name="wash_hands">Wash hands</string>
    <string name="throw_in_the_trash">throw in the trash</string>
    <string name="use_trash_kan">Use trash kan</string>
    <string name="CovidDefinition">CoviGuide will help you know more about the state of the pandamic in Tunisia by visiting the site dentifiyed in the home page , Also it will help you to be more aware about the danger of the virus ,it\'s symptoms , and it will help you find funny and healthy things to do whene you\'re quarantined</string>
    <string name="CoronaDefinition">Coronavirus disease (COVID-19) is an infectious disease caused by a newly discovered coronavirus. Most people infected withthe COVID-19 virus will experience mild to moderate respiratory illness and recover without requiring special treatment. Older people, and those with underlying medical problems like cardiovascular disease, diabetes, chronic respiratory disease, and cancer are more likely to develop serious illness.The COVID-19 virus spreads primarily through droplets of saliva or discharge from the nose when an infected person coughs or sneezes, so it’s important that you also practice respiratory etiquette (for example, by coughing into a flexed elbow).</string>
    <string name="headache">TODO</string>
    <string name="feverimage">feverimage</string>
    <string name="dry_cough">Dry cough</string>
    <string name="steps">Steps</string>
    <string name="stay_home_stay_safe">Stay Home ,Stay Safe</string>
    <string name="rule1">Clean high touch surfaces</string>
    <string name="rule2">Ventilate your home</string>
    <string name="rule3">Stay at home for seven days</string>
    <string name="meditate_image">meditate image</string>
    <string name="meditate">Meditate</string>
    <string name="sport_image">sport image</string>
    <string name="practise_sport">Practise sport</string>
    <string name="movie_image">movie image</string>
    <string name="healthy_image">healthy image</string>
    <string name="eat_healthy">Eat healthy</string>
    <string name="menu">menu</string>
    <string name="isolation_image">isolation image</string>
    <string name="action1">Stay home 14 days</string>
    <string name="avoid_image">avoid_image</string>
    <string name="do_not_welcome_visitors">do not welcome visitors</string>
    <string name="clean_image">clean_image</string>
    <string name="clean_surfaces">clean surfaces</string>
    <string name="ventilation_image">ventilation_image</string>
    <string name="ventilate_your_home">ventilate your home</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="sign_in">sign_in</string>
    <string name="lost_pass">lost pass</string>
    <string name="sign_up">sign up</string>
    <string name="email">email</string>
    <string name="phone_number">phone_number</string>
    <string name="go_to">go to</string>
    <string name="have_account">have account</string>
    <string name="title1">Things to do </string>
    <string name="title2">Home isolation rules</string>
    <string name="title3">Corona virus symptoms</string>
    <string name="title4">About application</string>
    <string name="title5">About corona virus</string>
    <string name="title6">How to protect </string>
    <string name="Settings">Settings</string>
    <string name="home_isolation">Home isolation</string>
    <string name="about">About</string>
    <string name="change_language">Change Language</string>
    <string name="full_name">Full name</string>
    <string name="age">Age</string>
    <string name="email_adresse">Email adresse</string>
    <string name="pwd">Password</string>
    <string name="sign_up1">Sign up</string>
    <string name="register_text">already registered? Go login</string>
    <string name="sign_in1">Sign in</string>
    <string name="register">register</string>
    <string name="forget_password">Forget password</string>
    <string name="remember_me">Remember me</string>
    <string name="use_mask">Use Mask</string>
    <string name="LOGOUT">LOGOUT</string>
    <string name="reset_password">Reset password</string>
    <string name="home">Home</string>
</resources>