<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/startImage"
        android:layout_width="20dp"
        android:layout_height="300dp"
        android:contentDescription="@string/applogo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/startText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startImage"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/AppName"
        android:textSize="50sp"
        android:textColor="@color/purple_700"/>

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/startText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@color/purple_700"
        android:textColor="@color/white"
        android:text="@string/Start"
        android:textSize="10pt"
        />





</RelativeLayout>