<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="7">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:weightSum="2"
        android:padding="16dp"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:cardElevation="2dp"
            app:cardCornerRadius="8dp"
            android:layout_margin="12dp"
            android:background="#fff"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="279dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="164dp"
                    android:layout_height="173sp"
                    android:contentDescription="@string/isolation_image"
                    android:src="@drawable/isolation" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action1"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            android:layout_weight="1"
            android:background="#fff"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="179dp"
                    android:layout_height="169dp"
                    android:contentDescription="@string/avoid_image"
                    android:src="@drawable/avoid" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/do_not_welcome_visitors"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:weightSum="2"
        android:padding="16dp"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:cardElevation="2dp"
            app:cardCornerRadius="8dp"
            android:layout_margin="12dp"
            android:background="#fff"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                >

                <ImageView
                    android:layout_width="162dp"
                    android:layout_height="156dp"
                    android:contentDescription="@string/clean_image"
                    android:src="@drawable/clean" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/clean_surfaces"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="25sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:cardElevation="2dp"
            app:cardCornerRadius="8dp"
            android:layout_margin="12dp"
            android:background="#fff"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                >

                <ImageView
                    android:layout_width="162dp"
                    android:layout_height="156dp"
                    android:contentDescription="@string/ventilation_image"
                    android:src="@drawable/ventilation" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/ventilate_your_home"
                    android:textColor="@color/black"
                    android:textSize="25sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>




</LinearLayout>