<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >
    <ImageView
        android:id="@+id/startImage"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/applogo"
        android:src="@mipmap/logo" />

    <TextView
        android:id="@+id/startText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startImage"
        android:text="@string/app_name"
        android:gravity="center_horizontal"
        android:textSize="15pt" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="35dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="120pt"
            android:text="@string/CovidDefinition"
            android:layout_marginRight="10pt"
            android:layout_marginLeft="10pt"
            android:textSize="18sp"
            android:textColor="@color/black"

            />


    </ScrollView>
</RelativeLayout>