<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="7"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:weightSum="2"
        android:padding="16dp"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:cardElevation="2dp"
            app:cardCornerRadius="8dp"
            android:layout_margin="12dp"
            android:background="#fff"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                >

                <ImageView
                    android:layout_width="164dp"
                    android:layout_height="173sp"
                    android:contentDescription="@string/headache"
                    android:src="@mipmap/headache" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Headache"
                    android:textSize="25dp"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:cardElevation="2dp"
            app:cardCornerRadius="8dp"
            android:layout_margin="12dp"
            android:background="#fff"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="173sp"
                    android:contentDescription="lungs"
                    android:src="@mipmap/lungs" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Breathing hard"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:weightSum="2"
        android:padding="16dp"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:cardElevation="2dp"
            app:cardCornerRadius="8dp"
            android:layout_margin="12dp"
            android:background="#fff"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                >

                <ImageView
                    android:layout_width="162dp"
                    android:layout_height="156dp"
                    android:contentDescription="@string/hand_washing"
                    android:src="@mipmap/cough" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dry_cough"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="25sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:cardElevation="2dp"
            app:cardCornerRadius="8dp"
            android:layout_margin="12dp"
            android:background="#fff"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                >

                <ImageView
                    android:layout_width="162dp"
                    android:layout_height="156dp"
                    android:contentDescription="@string/feverimage"
                    android:src="@mipmap/fever" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="Fever"
                    android:textColor="@color/black"
                    android:textSize="25sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>




</LinearLayout>